# serializer version: 1
# name: TestGenerateDetectsChanges.test_detects_new_symbol
  '''
  Generating maps: <TMP>/src/calculator -> <TMP>/docs/map
  
  Summary:
    Created: 0 files
    Updated: 0 files
  
  Missing docstrings (3 total):
    Add docstrings to source, then re-run generator.
  
    <TMP>/src/calculator/core.py:48 - clear
    <TMP>/src/calculator/core.py:14 - multiply
    <TMP>/src/calculator/operations.py:29 - modulo
  
  Missing descriptions (2 total):
    Edit these files directly (they're not auto-generated).
  
    <TMP>/docs/map/README.md
    <TMP>/docs/map/ARCHITECTURE.md
  
  Next steps:
    1. Add docstrings to source files listed above
    2. Re-run generator to update map
    3. Create domain files by analyzing module docs
         Cluster modules into semantic groupings (not 1:1 with directories)
         See: /Users/mhild/src/durandom/skills/durandom/skills/code-mapping/references/domains.md
    4. Write ARCHITECTURE.md (synthesize from domains)
  
  See: /Users/mhild/src/durandom/skills/durandom/skills/code-mapping/workflows/create.md for detailed guidance
  
  '''
# ---
# name: TestGenerateDetectsChanges.test_detects_removed_symbol
  '''
  Generating maps: <TMP>/src/calculator -> <TMP>/docs/map
  
  Summary:
    Created: 0 files
    Updated: 0 files
  
  Missing docstrings (1 total):
    Add docstrings to source, then re-run generator.
  
    <TMP>/src/calculator/core.py:48 - clear
  
  Missing descriptions (2 total):
    Edit these files directly (they're not auto-generated).
  
    <TMP>/docs/map/README.md
    <TMP>/docs/map/ARCHITECTURE.md
  
  Next steps:
    1. Add docstrings to source files listed above
    2. Re-run generator to update map
    3. Create domain files by analyzing module docs
         Cluster modules into semantic groupings (not 1:1 with directories)
         See: /Users/mhild/src/durandom/skills/durandom/skills/code-mapping/references/domains.md
    4. Write ARCHITECTURE.md (synthesize from domains)
  
  See: /Users/mhild/src/durandom/skills/durandom/skills/code-mapping/workflows/create.md for detailed guidance
  
  '''
# ---
# name: TestGenerateDetectsChanges.test_docstring_changes_update_map
  '''
  Generating maps: <TMP>/src/calculator -> <TMP>/docs/map
  
  Summary:
    Created: 0 files
    Updated: 0 files
  
  Missing docstrings (2 total):
    Add docstrings to source, then re-run generator.
  
    <TMP>/src/calculator/core.py:48 - clear
    <TMP>/src/calculator/core.py:14 - multiply
  
  Missing descriptions (2 total):
    Edit these files directly (they're not auto-generated).
  
    <TMP>/docs/map/README.md
    <TMP>/docs/map/ARCHITECTURE.md
  
  Next steps:
    1. Add docstrings to source files listed above
    2. Re-run generator to update map
    3. Create domain files by analyzing module docs
         Cluster modules into semantic groupings (not 1:1 with directories)
         See: /Users/mhild/src/durandom/skills/durandom/skills/code-mapping/references/domains.md
    4. Write ARCHITECTURE.md (synthesize from domains)
  
  See: /Users/mhild/src/durandom/skills/durandom/skills/code-mapping/workflows/create.md for detailed guidance
  
  '''
# ---
# name: TestGenerateIdempotent.test_second_run_no_changes
  '''
  Generating maps: <TMP>/src/calculator -> <TMP>/docs/map
  
  Summary:
    Created: 0 files
    Updated: 0 files
  
  Missing docstrings (2 total):
    Add docstrings to source, then re-run generator.
  
    <TMP>/src/calculator/core.py:48 - clear
    <TMP>/src/calculator/core.py:14 - multiply
  
  Missing descriptions (2 total):
    Edit these files directly (they're not auto-generated).
  
    <TMP>/docs/map/README.md
    <TMP>/docs/map/ARCHITECTURE.md
  
  Next steps:
    1. Add docstrings to source files listed above
    2. Re-run generator to update map
    3. Create domain files by analyzing module docs
         Cluster modules into semantic groupings (not 1:1 with directories)
         See: /Users/mhild/src/durandom/skills/durandom/skills/code-mapping/references/domains.md
    4. Write ARCHITECTURE.md (synthesize from domains)
  
  See: /Users/mhild/src/durandom/skills/durandom/skills/code-mapping/workflows/create.md for detailed guidance
  
  '''
# ---
# name: TestGenerateNewMap.test_generate_calculator_fixture
  '''
  Generating maps: <TMP>/src/calculator -> <TMP>/docs/map
  
  Summary:
    Created: 5 files
    Updated: 0 files
  
  Missing docstrings (2 total):
    Add docstrings to source, then re-run generator.
  
    <TMP>/src/calculator/core.py:48 - clear
    <TMP>/src/calculator/core.py:14 - multiply
  
  Missing descriptions (2 total):
    Edit these files directly (they're not auto-generated).
  
    <TMP>/docs/map/README.md
    <TMP>/docs/map/ARCHITECTURE.md
  
  Next steps:
    1. Add docstrings to source files listed above
    2. Re-run generator to update map
    3. Create domain files by analyzing module docs
         Cluster modules into semantic groupings (not 1:1 with directories)
         See: /Users/mhild/src/durandom/skills/durandom/skills/code-mapping/references/domains.md
    4. Write ARCHITECTURE.md (synthesize from domains)
  
  See: /Users/mhild/src/durandom/skills/durandom/skills/code-mapping/workflows/create.md for detailed guidance
  
  '''
# ---
